--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="msg_shipping_pt">Frete grátis</string>
     <string name="msg_available_es">Disponible en %d colores</string>
     <string name="msg_available_pt">Disponível em %d cores</string>
+    <string name="msg_welcome">Bienvenido! Por favor selecciona una de las siguientes opciones:</string>
+    <string name="msg_placeholder_es">Buscar productos, marcas y más…</string>
+    <string name="msg_placeholder_pt">Buscar produtos, marcas e muito mais…</string>
 </resources>
