feat: add unit test to project, update same dependecies.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="msg_available_MCO">Disponible en %d colores</string>
     <string name="msg_available_MLA">Disponible en %d colores</string>
     <string name="msg_available_MLB">Disponível em %d cores</string>
-    <string name="msg_welcome">Por favor selecciona en cual sitio de mercadolibre deseas hacer tu búsqueda:</string>
+    <string name="msg_welcome">Por favor selecciona en cuál sitio de Mercadolibre deseas hacer tu búsqueda:</string>
     <string name="msg_placeholder_MCO">Buscar productos, marcas y más…</string>
     <string name="msg_placeholder_MLA">Buscar productos, marcas y más…</string>
     <string name="msg_placeholder_MLB">Buscar produtos, marcas e muito mais…</string>
